Fixes Unit Tests and minor code refactoring.